Spent two days fixing fatal error (merged the wrong version of the app), from now on,I will save local copies of the project.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,8 @@
         <activity
             android:name=".Actividades.MainActivity"
             android:theme="@style/AppTheme" />
+        <activity android:name=".Actividades.DrinkActivity"
+            android:theme="@style/AppTheme"/>
     </application>
 
 </manifest>
