--- a/Boozer-Admin (React)/package.json
+++ b/Boozer-Admin (React)/package.json
@@ -16,7 +16,9 @@
     "react-icons": "^3.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
-    "react-with-firebase-auth": "^1.3.2"
+    "react-toastify": "^5.5.0",
+    "react-with-firebase-auth": "^1.3.2",
+    "simple-crypto-js": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
