--- a/Boozer-Admin (React)/package.json
+++ b/Boozer-Admin (React)/package.json
@@ -14,10 +14,13 @@
     "react-bootstrap": "^1.0.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.9.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "react-toastify": "^5.5.0",
     "react-with-firebase-auth": "^1.3.2",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "simple-crypto-js": "^2.2.0"
   },
   "scripts": {
