Favorites and Blacklist implemented, styles upgraded, code optimizations done

--- a/Boozer (Android Studio)/app/src/main/AndroidManifest.xml
+++ b/Boozer (Android Studio)/app/src/main/AndroidManifest.xml
@@ -14,30 +14,35 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".Actividades.ProfileActivity"
+            android:name=".Activities.ProfileActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Actividades.RegisterActivity"
+            android:name=".Activities.RegisterActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Actividades.LoginActivity"
+            android:name=".Activities.LoginActivity"
             android:label="@string/title_activity_login"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".Actividades.IndexActivity"
+            android:name=".Activities.IndexActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
-            android:name=".Actividades.MainActivity"
+            android:name=".Activities.MainActivity"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme" />
         <activity
-            android:name=".Actividades.DrinkActivity"
-            android:theme="@style/AppTheme"/>
+            android:name=".Activities.DrinkActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
