--- a/Boozer (Android Studio)/app/src/main/AndroidManifest.xml
+++ b/Boozer (Android Studio)/app/src/main/AndroidManifest.xml
@@ -42,7 +42,7 @@
         <activity
             android:name=".Activities.DrinkActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
