--- a/Boozer (Android Studio)/app/src/main/AndroidManifest.xml
+++ b/Boozer (Android Studio)/app/src/main/AndroidManifest.xml
@@ -38,7 +38,8 @@
         <activity
             android:name=".Activities.MainActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/AppTheme" />
+            android:theme="@style/AppTheme">
+        </activity>
         <activity
             android:name=".Activities.DrinkActivity"
             android:screenOrientation="portrait"
